# gmail-classifier

./: .gitignore  Dockerfile  Makefile  README.md  categories.yaml  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/services/: classifier.py  cleanup.py  gmail.py  llm_factory.py  summary.py
terraform/: main.tf  variables.tf
tests/: test_classifier.py  test_config.py  test_gmail.py  test_llm_factory.py  test_main.py
